--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,9 +4,11 @@ $lightback: #FFFFFF;
 $basicbtn: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
 $btnhover: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%); 
 $basicshadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-$hovershadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+$hovershadow: 0px 4px 15px rgba(0, 0, 0, 0.50);
 
 $elements-ton: #99E2D0;
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
+
+$dur-appear: 1000ms;
 
