--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -11,11 +11,8 @@
 }
 // loader:
 @keyframes fond {
-    0% {
-        opacity: 1;
-    }
     100% {
-        opacity: 0;
+        visibility: hidden;
     }
 }
 @keyframes spin {
