--- a/assets/style.css
+++ b/assets/style.css
@@ -15,11 +15,8 @@
   }
 }
 @keyframes fond {
-  0% {
-    opacity: 1;
-  }
   100% {
-    opacity: 0;
+    visibility: hidden;
   }
 }
 @keyframes spin {
@@ -97,8 +94,6 @@
   font-size: 16px;
   font-weight: 500;
   padding-left: 25px;
-  position: relative;
-  transform: translate(0, -35px);
 }
 .footer__logo {
   font-family: "Shrikhand", cursive;
@@ -158,10 +153,10 @@
     padding-left: 0;
   }
   .footer__logo {
-    padding: 0 20px;
+    padding: 0 50px 0 50px;
   }
   .footer__nav {
-    width: 70%;
+    width: 60%;
   }
   .footer__nav a {
     flex-direction: row;
@@ -204,7 +199,15 @@
 }
 @media screen and (min-width: 992px) {
   .formulaire {
-    padding-left: 80px;
+    justify-content: center;
+  }
+  .formulaire .fa-location-dot {
+    padding-right: 20px;
+  }
+  .formulaire__location {
+    width: 140px;
+    padding-left: 0;
+    background-color: #EAEAEA;
   }
 }
 .banner img {
@@ -221,6 +224,7 @@
   border-radius: 35px 35px 0 0;
   position: relative;
   transform: translate(0, -35px);
+  margin-bottom: -40px;
 }
 .menu__title {
   display: flex;
@@ -385,7 +389,7 @@
     height: 290px;
   }
   .menu {
-    margin: 0 70px;
+    margin: 0 70px -35px 70px;
     padding: 0 30px;
   }
   .menu__title .hearts :nth-child(2) {
@@ -399,7 +403,7 @@
     width: 100%;
   }
   .menu {
-    margin: 0 150px;
+    margin: 0 150px -35px 150px;
   }
   .menu__title {
     justify-content: center;
@@ -422,12 +426,12 @@
 * {
   box-sizing: border-box;
   list-style: none;
+  margin: auto 0;
 }
 
 #main-wrapper {
   display: flex;
   flex-direction: column;
-  margin: auto;
 }
 
 img {
@@ -446,7 +450,9 @@ h2, h3, h4, p {
   height: 100%;
   width: 100%;
   background-color: white;
-  animation: fond 3000ms both;
+  position: fixed;
+  animation: fond 0.1ms both 2200ms;
+  z-index: 1000;
 }
 .loader__rotate {
   border-right: 10px solid #99E2D0;
@@ -474,6 +480,7 @@ h2, h3, h4, p {
   min-height: 300px;
   background: #F6F6F6;
   font-family: "Roboto", sans-serif;
+  padding: 0 17px;
 }
 .introduction :first-child {
   font-size: 24px;
@@ -592,7 +599,8 @@ h2, h3, h4, p {
 }
 .restaurants .LesCards .card p {
   position: absolute;
-  right: 20px;
+  right: 13px;
+  top: 13px;
   background: #99E2D0;
   padding: 7px 9px;
   color: #008766;
@@ -656,6 +664,10 @@ h2, h3, h4, p {
 }
 
 @media screen and (min-width: 700px) {
+  .loader__rotate {
+    width: 125px;
+    height: 125px;
+  }
   .introduction :first-child {
     font-size: 30px;
   }
@@ -673,6 +685,10 @@ h2, h3, h4, p {
   }
 }
 @media screen and (min-width: 992px) {
+  .loader__rotate {
+    width: 150px;
+    height: 150px;
+  }
   .introduction {
     justify-content: space-evenly;
     min-height: 260px;
