--- a/sass/layouts/_headfoot.scss
+++ b/sass/layouts/_headfoot.scss
@@ -24,8 +24,6 @@
     font-size: 16px;
     font-weight: 500;
     padding-left: 25px;
-    position: relative;
-    transform: translate(0, -35px);
     &__logo {
         font: {
             family: 'Shrikhand', cursive; size: 18px; weight: 400;
@@ -86,10 +84,10 @@
         height: 114px;
         padding-left: 0;
         &__logo {
-            padding: 0 20px;
+            padding: 0 50px 0 50px;
         }
         &__nav {
-            width: 70%;
+            width: 60%;
             a {   
                 flex-direction: row;
                 align-items: center;
