--- a/assets/style.css
+++ b/assets/style.css
@@ -277,6 +277,7 @@
 }
 .menu .fa-minus {
   font-size: 40px;
+  margin: 0;
   color: #99E2D0;
 }
 .menu .delay-0 {
@@ -321,6 +322,7 @@
   overflow: hidden;
   cursor: pointer;
   margin-bottom: 12px;
+  width: 100%;
 }
 .menu .category__text {
   display: flex;
@@ -328,7 +330,11 @@
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  width: 100%;
+  width: 90%;
+  border: 1px solid pink;
+}
+.menu .category__text:hover {
+  width: 82%;
 }
 .menu .category__text .details {
   display: flex;
@@ -337,13 +343,16 @@
   padding-left: 11px;
   overflow: hidden;
   white-space: nowrap;
-  width: 60%;
+  border: 1px solid blueviolet;
+  width: 85%;
+  padding-right: 10px;
 }
 .menu .category__text .details h3 {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   margin: 0;
+  padding-right: 10px;
   font-size: 18px;
   font-weight: 700;
 }
@@ -358,7 +367,7 @@
 }
 .menu .category__text .price {
   height: 100%;
-  padding-top: 20px;
+  padding-top: 39px;
   font-size: 15px;
   font-weight: 700;
 }
@@ -366,7 +375,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 15px;
   background: #99E2D0;
   height: 100%;
   color: white;
