--- a/sass/layouts/_menus.scss
+++ b/sass/layouts/_menus.scss
@@ -66,6 +66,7 @@
     }
     .fa-minus {
         font-size: 40px;
+        margin: 0;
         color: $elements-ton;
     }
     .delay-0 {
@@ -110,13 +111,18 @@
         overflow: hidden;
         cursor: pointer;
         margin-bottom: 12px;
+        width: 100%;
         &__text {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
             height: 100%;
-            width: 100%;
+            width: 90%;
+            border: 1px solid pink;
+            &:hover {
+                width: 82%;
+            }
             .details {
                 display: flex;
                 flex-direction: column;
@@ -124,10 +130,13 @@
                 padding-left: 11px;
                 overflow:hidden;
                 white-space: nowrap;
-                width: 60%;
+                border: 1px solid blueviolet;
+                width: 85%;
+                padding-right: 10px;
                 h3 {
                     @include ellipsis;
                     margin: 0;
+                    padding-right: 10px;
                     font: {
                         size: 18px; weight: 700;
                     }
@@ -143,7 +152,7 @@
             }
             .price {
                 height: 100%;
-                padding-top: 20px;
+                padding-top: 39px;
                 font: {
                     size: 15px; weight: 700;
                 }
@@ -153,7 +162,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-left: 15px;
             background: $elements-ton;
             height: 100%;
             color: white;
