--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,7 @@
     justify-content: space-evenly;
     align-items: center;
     height: 114px;
-    padding-left: 0px;
+    padding: 10px 0 10px 0;
   }
   .footer__logo {
     padding: 0;
@@ -138,9 +138,8 @@
   }
   .footer__nav a {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    gap: 2px;
+    gap: 3px;
     line-height: 17px;
   }
 }
@@ -331,7 +330,6 @@
   align-items: center;
   height: 100%;
   width: 90%;
-  border: 1px solid pink;
 }
 .menu .category__text:hover {
   width: 82%;
@@ -343,7 +341,6 @@
   padding-left: 11px;
   overflow: hidden;
   white-space: nowrap;
-  border: 1px solid blueviolet;
   width: 85%;
   padding-right: 10px;
 }
@@ -403,6 +400,12 @@
   .menu__title .hearts :nth-child(2) {
     bottom: -9px;
   }
+  .menu .category__text {
+    width: 95%;
+  }
+  .menu .category__text:hover {
+    width: 87%;
+  }
 }
 @media screen and (min-width: 992px) {
   .banner img {
@@ -426,6 +429,12 @@
   .menu .category {
     margin: 0 15px 0 15px;
     margin-bottom: 12px;
+  }
+  .menu .category__text {
+    width: 95%;
+  }
+  .menu .category__text:hover {
+    width: 95%;
   }
   .menu .category__text .details {
     padding: 0 15px 0 15px;
