--- a/sass/layouts/_headfoot.scss
+++ b/sass/layouts/_headfoot.scss
@@ -54,7 +54,7 @@
         justify-content: space-evenly;
         align-items: center;
         height: 114px;
-        padding-left: 0px;
+        padding: 10px 0 10px 0;
         &__logo {
             padding: 0;
         }
@@ -66,14 +66,12 @@
             width: 100%;
             a {   
                 display: flex;
-                flex-direction: column;
                 align-items: center;
-                gap: 2px;
+                gap: 3px;
                 line-height: 17px;
             }
         }           
     }
-    
 }
 // responsive desktop:
 @media screen and (min-width:992px) {
